--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
   <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/lineicons.css" />
   <link rel="stylesheet" href="assets/css/ud-styles.css" />
-  <link rel="stylesheet" href="assets/css/form.css" />
+  <link rel="stylesheet" href="assets/css/complemet.css" />
+  <link rel="stylesheet" href="https://cdn.plyr.io/3.6.8/plyr.css" />
+
 </head>
 
 <body>
@@ -53,15 +55,15 @@
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-xlg">
             <a class="navbar-brand" href="index.html">
-              <img src="assets/images/logo/logo.svg" alt="Logo" />
+              <img src="assets/images/logo/logo.svg" alt="Back to homepage" />
             </a>
-            <button class="navbar-toggler">
+            <button class="navbar-toggler" aria-expanded="false" aria-haspopup="true" aria-controls="navDiv">
               <span class="toggler-icon"> </span>
               <span class="toggler-icon"> </span>
               <span class="toggler-icon"> </span>
             </button>
 
-            <div class="navbar-collapse">
+            <div id="navDiv" class="navbar-collapse">
               <ul id="nav" class="navbar-nav mx-auto">
                 <li class="nav-item">
                   <a class="ud-menu-scroll" href="#home">Home</a>
@@ -71,7 +73,10 @@
                   <a class="ud-menu-scroll" href="#features">Features</a>
                 </li>
                 <li class="nav-item">
-                  <a class="ud-menu-scroll" href="#pricing">Pricing</a>
+                  <a class="ud-menu-scroll" href="#faq">FAQ</a>
+                </li>
+                <li class="nav-item">
+                  <a class="ud-menu-scroll" href="#whatchVideo">Video</a>
                 </li>
                 <li class="nav-item">
                   <a class="ud-menu-scroll" href="#contact">Contact</a>
@@ -102,13 +107,13 @@
               <li>
                 <a href="https://links.uideck.com/play-bootstrap-download" rel="nofollow noopener" target="_blank"
                   class="ud-main-btn ud-white-btn">
-                  Download Now
+                  Download <span class="sr-only">Play</span> Now
                 </a>
               </li>
               <li>
                 <a href="https://github.com/uideck/play-bootstrap" rel="nofollow noopener" target="_blank"
                   class="ud-main-btn ud-link-btn">
-                  Learn More <i class="lni lni-arrow-right"></i>
+                  Learn More <span class="sr-only">about Play</span> <i class="lni lni-arrow-right"></i>
                 </a>
               </li>
             </ul>
@@ -154,7 +159,7 @@
                 Lorem Ipsum is simply dummy text of the printing and industry.
               </p>
               <a href="javascript:void(0)" class="ud-feature-link">
-                Learn More
+                Learn More <span class="sr-only">about Free and Open Source</span>
               </a>
             </div>
           </div>
@@ -170,7 +175,7 @@
                 Lorem Ipsum is simply dummy text of the printing and industry.
               </p>
               <a href="javascript:void(0)" class="ud-feature-link">
-                Learn More
+                Learn More <span class="sr-only">about Multipurpose Template</span>
               </a>
             </div>
           </div>
@@ -186,7 +191,7 @@
                 Lorem Ipsum is simply dummy text of the printing and industry.
               </p>
               <a href="javascript:void(0)" class="ud-feature-link">
-                Learn More
+                Learn More <span class="sr-only">about High-quality Design</span>
               </a>
             </div>
           </div>
@@ -202,7 +207,7 @@
                 Lorem Ipsum is simply dummy text of the printing and industry.
               </p>
               <a href="javascript:void(0)" class="ud-feature-link">
-                Learn More
+                Learn More <span class="sr-only">about All Essential Elements</span>
               </a>
             </div>
           </div>
@@ -211,98 +216,6 @@
     </div>
   </section>
   <!-- ====== Features End ====== -->
-
-  <!-- ====== Pricing Start ====== -->
-  <section id="pricing" class="ud-pricing">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12">
-          <div class="ud-section-title mx-auto text-center">
-            <span>Pricing</span>
-            <h2>Our Pricing Plans</h2>
-            <p>
-              There are many variations of passages of Lorem Ipsum available
-              but the majority have suffered alteration in some form.
-            </p>
-          </div>
-        </div>
-      </div>
-
-      <div class="row g-0 align-items-center justify-content-center">
-        <div class="col-lg-4 col-md-6 col-sm-10">
-          <div class="ud-single-pricing first-item wow fadeInUp" data-wow-delay=".15s">
-            <div class="ud-pricing-header">
-              <h3>STARTING FROM</h3>
-              <h4>$ 19.99/mo</h4>
-            </div>
-            <div class="ud-pricing-body">
-              <ul>
-                <li>5 User</li>
-                <li>All UI components</li>
-                <li>Lifetime access</li>
-                <li>Free updates</li>
-                <li>Use on 1 (one) project</li>
-                <li>4 Months support</li>
-              </ul>
-            </div>
-            <div class="ud-pricing-footer">
-              <a href="javascript:void(0)" class="ud-main-btn ud-border-btn">
-                Purchase Now
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-10">
-          <div class="ud-single-pricing active wow fadeInUp" data-wow-delay=".1s">
-            <span class="ud-popular-tag">POPULAR</span>
-            <div class="ud-pricing-header">
-              <h3>STARTING FROM</h3>
-              <h4>$ 30.99/mo</h4>
-            </div>
-            <div class="ud-pricing-body">
-              <ul>
-                <li>5 User</li>
-                <li>All UI components</li>
-                <li>Lifetime access</li>
-                <li>Free updates</li>
-                <li>Use on 1 (one) project</li>
-                <li>4 Months support</li>
-              </ul>
-            </div>
-            <div class="ud-pricing-footer">
-              <a href="javascript:void(0)" class="ud-main-btn ud-white-btn">
-                Purchase Now
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 col-sm-10">
-          <div class="ud-single-pricing last-item wow fadeInUp" data-wow-delay=".15s">
-            <div class="ud-pricing-header">
-              <h3>STARTING FROM</h3>
-              <h4>$ 70.99/mo</h4>
-            </div>
-            <div class="ud-pricing-body">
-              <ul>
-                <li>5 User</li>
-                <li>All UI components</li>
-                <li>Lifetime access</li>
-                <li>Free updates</li>
-                <li>Use on 1 (one) project</li>
-                <li>4 Months support</li>
-              </ul>
-            </div>
-            <div class="ud-pricing-footer">
-              <a href="javascript:void(0)" class="ud-main-btn ud-border-btn">
-                Purchase Now
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- ====== Pricing End ====== -->
 
   <!-- ====== FAQ Start ====== -->
   <section id="faq" class="ud-faq">
@@ -327,13 +240,13 @@
         <div class="col-lg-6">
           <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
             <div class="accordion">
-              <button class="ud-faq-btn collapsed" data-bs-toggle="collapse" data-bs-target="#collapseOne">
+              <button class="ud-faq-btn collapsed" aria-controls="collapseOne" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#collapseOne">
                 <span class="icon flex-shrink-0">
                   <i class="lni lni-chevron-down"></i>
                 </span>
                 <span>How to use UIdeck?</span>
               </button>
-              <div id="collapseOne" class="accordion-collapse collapse">
+              <div id="collapseOne" class="accordion-collapse collapse" tabindex="-1">
                 <div class="ud-faq-body">
                   Lorem Ipsum is simply dummy text of the printing and
                   typesetting industry. Lorem Ipsum has been the industry's
@@ -346,13 +259,13 @@
           </div>
           <div class="ud-single-faq wow fadeInUp" data-wow-delay=".15s">
             <div class="accordion">
-              <button class="ud-faq-btn collapsed" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
+              <button class="ud-faq-btn collapsed" aria-controls="collapseTwo" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
                 <span class="icon flex-shrink-0">
                   <i class="lni lni-chevron-down"></i>
                 </span>
                 <span>How to download icons from Lineicons?</span>
               </button>
-              <div id="collapseTwo" class="accordion-collapse collapse">
+              <div id="collapseTwo" class="accordion-collapse collapse" tabindex="-1">
                 <div class="ud-faq-body">
                   Lorem Ipsum is simply dummy text of the printing and
                   typesetting industry. Lorem Ipsum has been the industry's
@@ -365,13 +278,13 @@
           </div>
           <div class="ud-single-faq wow fadeInUp" data-wow-delay=".2s">
             <div class="accordion">
-              <button class="ud-faq-btn collapsed" data-bs-toggle="collapse" data-bs-target="#collapseThree">
+              <button class="ud-faq-btn collapsed" aria-controls="collapseThree" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#collapseThree">
                 <span class="icon flex-shrink-0">
                   <i class="lni lni-chevron-down"></i>
                 </span>
                 <span>Is GrayGrids part of UIdeck?</span>
               </button>
-              <div id="collapseThree" class="accordion-collapse collapse">
+              <div id="collapseThree" class="accordion-collapse collapse" tabindex="-1">
                 <div class="ud-faq-body">
                   Lorem Ipsum is simply dummy text of the printing and
                   typesetting industry. Lorem Ipsum has been the industry's
@@ -386,13 +299,13 @@
         <div class="col-lg-6">
           <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
             <div class="accordion">
-              <button class="ud-faq-btn collapsed" data-bs-toggle="collapse" data-bs-target="#collapseFour">
+              <button class="ud-faq-btn collapsed" aria-controls="collapseFour" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#collapseFour">
                 <span class="icon flex-shrink-0">
                   <i class="lni lni-chevron-down"></i>
                 </span>
                 <span>Can I use this template for commercial project?</span>
               </button>
-              <div id="collapseFour" class="accordion-collapse collapse">
+              <div id="collapseFour" class="accordion-collapse collapse" tabindex="-1">
                 <div class="ud-faq-body">
                   Lorem Ipsum is simply dummy text of the printing and
                   typesetting industry. Lorem Ipsum has been the industry's
@@ -405,13 +318,13 @@
           </div>
           <div class="ud-single-faq wow fadeInUp" data-wow-delay=".15s">
             <div class="accordion">
-              <button class="ud-faq-btn collapsed" data-bs-toggle="collapse" data-bs-target="#collapseFive">
+              <button class="ud-faq-btn collapsed" aria-controls="collapseFive" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#collapseFive">
                 <span class="icon flex-shrink-0">
                   <i class="lni lni-chevron-down"></i>
                 </span>
                 <span>Do you have plan releasing Play Pro?</span>
               </button>
-              <div id="collapseFive" class="accordion-collapse collapse">
+              <div id="collapseFive" class="accordion-collapse collapse" tabindex="-1">
                 <div class="ud-faq-body">
                   Lorem Ipsum is simply dummy text of the printing and
                   typesetting industry. Lorem Ipsum has been the industry's
@@ -424,13 +337,13 @@
           </div>
           <div class="ud-single-faq wow fadeInUp" data-wow-delay=".2s">
             <div class="accordion">
-              <button class="ud-faq-btn collapsed" data-bs-toggle="collapse" data-bs-target="#collapseSix">
+              <button class="ud-faq-btn collapsed" aria-controls="collapseSix" aria-expanded="false" data-bs-toggle="collapse" data-bs-target="#collapseSix">
                 <span class="icon flex-shrink-0">
                   <i class="lni lni-chevron-down"></i>
                 </span>
                 <span>Where and how to host this template?</span>
               </button>
-              <div id="collapseSix" class="accordion-collapse collapse">
+              <div id="collapseSix" class="accordion-collapse collapse" tabindex="-1">
                 <div class="ud-faq-body">
                   Lorem Ipsum is simply dummy text of the printing and
                   typesetting industry. Lorem Ipsum has been the industry's
@@ -446,6 +359,33 @@
     </div>
   </section>
   <!-- ====== FAQ End ====== -->
+
+  <!-- ====== Video Stat ====== -->
+  <section id="whatchVideo" class="ud-features">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="ud-section-title">
+            <span>Here's a cool video</span>
+            <h2>Informative Video</h2>
+            <p>
+              There are many variations of passages of Lorem Ipsum available
+              but the majority have suffered alteration in some form.
+            </p>
+            <div>
+              <video id="player" playsinline controls data-poster="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.jpg">
+                <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" type="video/mp4" />
+              
+                <!-- Captions are optional -->
+                <track kind="captions" label="English captions" src="/assets/captions/captions.vtt" srclang="en" default />
+              </video>  
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- ====== Video End ====== -->
 
   <!-- ====== Contact Start ====== -->
   <section id="contact" class="ud-contact">
@@ -523,7 +463,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="ud-widget">
               <a href="index.html" class="ud-footer-logo">
-                <img src="assets/images/logo/logo.svg" alt="logo" />
+                <img src="assets/images/logo/logo.svg" alt="Back to homepage" />
               </a>
               <p class="ud-widget-desc">
                 We create digital experiences for brands and companies by
@@ -532,21 +472,25 @@
               <ul class="ud-widget-socials">
                 <li>
                   <a href="https://twitter.com/MusharofChy">
+                    <span class="sr-only">Follow us on Facebook</span>
                     <i class="lni lni-facebook-filled"></i>
                   </a>
                 </li>
                 <li>
                   <a href="https://twitter.com/MusharofChy">
+                    <span class="sr-only">Follow us on Twitter</span>
                     <i class="lni lni-twitter-filled"></i>
                   </a>
                 </li>
                 <li>
                   <a href="https://twitter.com/MusharofChy">
+                    <span class="sr-only">Follow us on Instagram</span>
                     <i class="lni lni-instagram-filled"></i>
                   </a>
                 </li>
                 <li>
                   <a href="https://twitter.com/MusharofChy">
+                    <span class="sr-only">Follow us on Linkedin</span>
                     <i class="lni lni-linkedin-original"></i>
                   </a>
                 </li>
@@ -682,6 +626,7 @@
 
   <!-- ====== Back To Top Start ====== -->
   <a href="javascript:void(0)" class="back-to-top">
+    <span class="sr-only">Back to top</span>
     <i class="lni lni-chevron-up"> </i>
   </a>
   <!-- ====== Back To Top End ====== -->
@@ -690,7 +635,13 @@
   <script src="assets/js/bootstrap.bundle.min.js"></script>
   <script src="assets/js/wow.min.js"></script>
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/nav.complement.js"></script>
+  <script src="assets/js/accordions.complement.js"></script>
   <script src="assets/js/form.js"></script>
+  <script src="https://cdn.plyr.io/3.6.8/plyr.js"></script>
+  <script>
+    const player = new Plyr('#player');
+  </script>
 </body>
 
 </html>
