Non accessible features added:
- Unnecessary alt text
- Wrong semantic elements added
- No captions in video
- Video autoplays
- Low contrast text
- Non accessible form
- Page is not structured
- No H1 heading

--- a/index.html
+++ b/index.html
@@ -48,25 +48,20 @@
 </head>
 
 <body>
-  <!-- ====== Skip to Content Start ====== -->
-  <a id="skip" href="#main">Skip to main content</a>
-  <!-- ====== Skip to Content End ====== -->
-
   <!-- ====== Header Start ====== -->
-  <main id="main">
     <header class="ud-header">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-xlg">
               <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo/logo.svg" alt="Back to homepage" />
+                <img src="assets/images/logo/logo.svg" alt="logo" />
               </a>
-              <button class="navbar-toggler" aria-expanded="false" aria-haspopup="true" aria-controls="navDiv">
+              <a class="navbar-toggler">
                 <span class="toggler-icon"> </span>
                 <span class="toggler-icon"> </span>
                 <span class="toggler-icon"> </span>
-              </button>
+              </a>
 
               <div id="navDiv" class="navbar-collapse">
                 <ul id="nav" class="navbar-nav mx-auto">
@@ -101,9 +96,9 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="ud-hero-content wow fadeInUp" data-wow-delay=".2s">
-              <h1 class="ud-hero-title">
+              <h2 class="ud-hero-title">
                 Open-Source Web Template for SaaS, Startup, Apps, and More
-              </h1>
+              </h2>
               <p class="ud-hero-desc">
                 Multidisciplinary Web Template Built with Your Favourite
                 Technology - HTML Bootstrap, Tailwind and React NextJS.
@@ -112,24 +107,24 @@
                 <li>
                   <a href="https://links.uideck.com/play-bootstrap-download" rel="nofollow noopener" target="_blank"
                     class="ud-main-btn ud-white-btn">
-                    Download <span class="sr-only">Play</span> Now
+                    Download Now
                   </a>
                 </li>
                 <li>
                   <a href="https://github.com/uideck/play-bootstrap" rel="nofollow noopener" target="_blank"
                     class="ud-main-btn ud-link-btn">
-                    Learn More <span class="sr-only">about Play</span> <i class="lni lni-arrow-right"></i>
+                    Learn More <i class="lni lni-arrow-right"></i>
                   </a>
                 </li>
               </ul>
             </div>
             <div class="ud-hero-brands-wrapper wow fadeInUp" data-wow-delay=".3s">
-              <img src="assets/images/hero/brand.svg" alt="" />
+              <img src="assets/images/hero/brand.svg" />
             </div>
             <div class="ud-hero-image wow fadeInUp" data-wow-delay=".25s">
-              <img src="assets/images/hero/hero-image.svg" alt="" />
-              <img src="assets/images/hero/dotted-shape.svg" alt="" class="shape shape-1" />
-              <img src="assets/images/hero/dotted-shape.svg" alt="" class="shape shape-2" />
+              <img src="assets/images/hero/hero-image.svg" alt="shape" />
+              <img src="assets/images/hero/dotted-shape.svg" alt="shape" class="shape shape-1" />
+              <img src="assets/images/hero/dotted-shape.svg" alt="shape" class="shape shape-2" />
             </div>
           </div>
         </div>
@@ -164,7 +159,7 @@
                   Lorem Ipsum is simply dummy text of the printing and industry.
                 </p>
                 <a href="javascript:void(0)" class="ud-feature-link">
-                  Learn More <span class="sr-only">about Free and Open Source</span>
+                  Learn More about Free and Open Source</span>
                 </a>
               </div>
             </div>
@@ -180,7 +175,7 @@
                   Lorem Ipsum is simply dummy text of the printing and industry.
                 </p>
                 <a href="javascript:void(0)" class="ud-feature-link">
-                  Learn More <span class="sr-only">about Multipurpose Template</span>
+                  Learn More about Multipurpose Template</span>
                 </a>
               </div>
             </div>
@@ -196,7 +191,7 @@
                   Lorem Ipsum is simply dummy text of the printing and industry.
                 </p>
                 <a href="javascript:void(0)" class="ud-feature-link">
-                  Learn More <span class="sr-only">about High-quality Design</span>
+                  Learn More about High-quality Design</span>
                 </a>
               </div>
             </div>
@@ -212,7 +207,7 @@
                   Lorem Ipsum is simply dummy text of the printing and industry.
                 </p>
                 <a href="javascript:void(0)" class="ud-feature-link">
-                  Learn More <span class="sr-only">about All Essential Elements</span>
+                  Learn More about All Essential Elements</span>
                 </a>
               </div>
             </div>
@@ -225,7 +220,7 @@
     <!-- ====== FAQ Start ====== -->
     <section id="faq" class="ud-faq">
       <div class="shape">
-        <img src="assets/images/faq/shape.svg" alt="" />
+        <img src="assets/images/faq/shape.svg" alt="shape" />
       </div>
       <div class="container">
         <div class="row">
@@ -245,13 +240,13 @@
           <div class="col-lg-6">
             <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
               <div class="accordion">
-                <button class="ud-faq-btn collapsed" aria-controls="collapseOne" aria-expanded="false"
+                <div class="ud-faq-btn collapsed" aria-controls="collapseOne" aria-expanded="false"
                   data-bs-toggle="collapse" data-bs-target="#collapseOne">
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
                   <span>How to use UIdeck?</span>
-                </button>
+                </div>
                 <div id="collapseOne" class="accordion-collapse collapse" tabindex="-1">
                   <div class="ud-faq-body">
                     Lorem Ipsum is simply dummy text of the printing and
@@ -265,13 +260,13 @@
             </div>
             <div class="ud-single-faq wow fadeInUp" data-wow-delay=".15s">
               <div class="accordion">
-                <button class="ud-faq-btn collapsed" aria-controls="collapseTwo" aria-expanded="false"
+                <div class="ud-faq-btn collapsed" aria-controls="collapseTwo" aria-expanded="false"
                   data-bs-toggle="collapse" data-bs-target="#collapseTwo">
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
                   <span>How to download icons from Lineicons?</span>
-                </button>
+                </div>
                 <div id="collapseTwo" class="accordion-collapse collapse" tabindex="-1">
                   <div class="ud-faq-body">
                     Lorem Ipsum is simply dummy text of the printing and
@@ -285,13 +280,13 @@
             </div>
             <div class="ud-single-faq wow fadeInUp" data-wow-delay=".2s">
               <div class="accordion">
-                <button class="ud-faq-btn collapsed" aria-controls="collapseThree" aria-expanded="false"
+                <div class="ud-faq-btn collapsed" aria-controls="collapseThree" aria-expanded="false"
                   data-bs-toggle="collapse" data-bs-target="#collapseThree">
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
                   <span>Is GrayGrids part of UIdeck?</span>
-                </button>
+                </div>
                 <div id="collapseThree" class="accordion-collapse collapse" tabindex="-1">
                   <div class="ud-faq-body">
                     Lorem Ipsum is simply dummy text of the printing and
@@ -307,13 +302,13 @@
           <div class="col-lg-6">
             <div class="ud-single-faq wow fadeInUp" data-wow-delay=".1s">
               <div class="accordion">
-                <button class="ud-faq-btn collapsed" aria-controls="collapseFour" aria-expanded="false"
+                <div class="ud-faq-btn collapsed" aria-controls="collapseFour" aria-expanded="false"
                   data-bs-toggle="collapse" data-bs-target="#collapseFour">
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
                   <span>Can I use this template for commercial project?</span>
-                </button>
+                </div>
                 <div id="collapseFour" class="accordion-collapse collapse" tabindex="-1">
                   <div class="ud-faq-body">
                     Lorem Ipsum is simply dummy text of the printing and
@@ -327,13 +322,13 @@
             </div>
             <div class="ud-single-faq wow fadeInUp" data-wow-delay=".15s">
               <div class="accordion">
-                <button class="ud-faq-btn collapsed" aria-controls="collapseFive" aria-expanded="false"
+                <div class="ud-faq-btn collapsed" aria-controls="collapseFive" aria-expanded="false"
                   data-bs-toggle="collapse" data-bs-target="#collapseFive">
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
                   <span>Do you have plan releasing Play Pro?</span>
-                </button>
+                </div>
                 <div id="collapseFive" class="accordion-collapse collapse" tabindex="-1">
                   <div class="ud-faq-body">
                     Lorem Ipsum is simply dummy text of the printing and
@@ -347,13 +342,13 @@
             </div>
             <div class="ud-single-faq wow fadeInUp" data-wow-delay=".2s">
               <div class="accordion">
-                <button class="ud-faq-btn collapsed" aria-controls="collapseSix" aria-expanded="false"
+                <div class="ud-faq-btn collapsed" aria-controls="collapseSix" aria-expanded="false"
                   data-bs-toggle="collapse" data-bs-target="#collapseSix">
                   <span class="icon flex-shrink-0">
                     <i class="lni lni-chevron-down"></i>
                   </span>
                   <span>Where and how to host this template?</span>
-                </button>
+                </div>
                 <div id="collapseSix" class="accordion-collapse collapse" tabindex="-1">
                   <div class="ud-faq-body">
                     Lorem Ipsum is simply dummy text of the printing and
@@ -384,14 +379,10 @@
                 but the majority have suffered alteration in some form.
               </p>
               <div>
-                <video id="player" playsinline controls
+                <video autoplay id="player" playsinline controls
                   data-poster="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.jpg">
                   <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4"
                     type="video/mp4" />
-
-                  <!-- Captions are optional -->
-                  <track kind="captions" label="English captions" src="/assets/captions/captions.vtt" srclang="en"
-                    default />
                 </video>
               </div>
             </div>
@@ -442,35 +433,31 @@
               <h3 class="ud-contact-form-title">Get In Touch</h3>
               <form class="ud-contact-form">
                 <div class="ud-form-group">
-                  <label for="email">Email*</label>
-                  <input id="email" type="email" name="email" placeholder="you@example.com" />
-                  <p id="phoneError" class="errorMsg">Please enter a valid email</p>
+                  <input id="email" type="email" name="email" placeholder="Email" />
                 </div>
                 <div class="ud-form-group mb-0">
-                  <button type="submit" class="ud-main-btn" aria-disabled="true">
+                  <button type="submit" class="ud-main-btn">
                     Submit
                   </button>
                 </div>
-                <p tabindex="-1" class="successMsg" hidden>Thank you! We'll be in touch</p>
               </form>
             </div>
           </div>
         </div>
       </div>
     </section>
-  </main>
   <!-- ====== Contact End ====== -->
 
   <!-- ====== Footer Start ====== -->
-  <footer class="ud-footer wow fadeInUp" data-wow-delay=".15s">
+  <section class="ud-footer wow fadeInUp" data-wow-delay=".15s">
     <div class="shape shape-1">
-      <img src="assets/images/footer/shape-1.svg" alt="" />
+      <img src="assets/images/footer/shape-1.svg" alt="shape" />
     </div>
     <div class="shape shape-2">
-      <img src="assets/images/footer/shape-2.svg" alt="" />
+      <img src="assets/images/footer/shape-2.svg" alt="shape" />
     </div>
     <div class="shape shape-3">
-      <img src="assets/images/footer/shape-3.svg" alt="" />
+      <img src="assets/images/footer/shape-3.svg" alt="shape" />
     </div>
     <div class="ud-footer-widgets">
       <div class="container">
@@ -478,7 +465,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="ud-widget">
               <a href="index.html" class="ud-footer-logo">
-                <img src="assets/images/logo/logo.svg" alt="Back to homepage" />
+                <img src="assets/images/logo/logo.svg" alt="" />
               </a>
               <p class="ud-widget-desc">
                 We create digital experiences for brands and companies by
@@ -487,25 +474,21 @@
               <ul class="ud-widget-socials">
                 <li>
                   <a href="https://twitter.com/MusharofChy">
-                    <span class="sr-only">Follow us on Facebook</span>
                     <i class="lni lni-facebook-filled"></i>
                   </a>
                 </li>
                 <li>
                   <a href="https://twitter.com/MusharofChy">
-                    <span class="sr-only">Follow us on Twitter</span>
                     <i class="lni lni-twitter-filled"></i>
                   </a>
                 </li>
                 <li>
                   <a href="https://twitter.com/MusharofChy">
-                    <span class="sr-only">Follow us on Instagram</span>
                     <i class="lni lni-instagram-filled"></i>
                   </a>
                 </li>
                 <li>
                   <a href="https://twitter.com/MusharofChy">
-                    <span class="sr-only">Follow us on Linkedin</span>
                     <i class="lni lni-linkedin-original"></i>
                   </a>
                 </li>
@@ -636,12 +619,11 @@
         </div>
       </div>
     </div>
-  </footer>
+  </section>
   <!-- ====== Footer End ====== -->
 
   <!-- ====== Back To Top Start ====== -->
   <a href="javascript:void(0)" class="back-to-top">
-    <span class="sr-only">Back to top</span>
     <i class="lni lni-chevron-up"> </i>
   </a>
   <!-- ====== Back To Top End ====== -->
