--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <body>
   <!-- ====== Header Start ====== -->
-    <header class="ud-header">
+    <section class="ud-header">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -87,7 +87,7 @@
           </div>
         </div>
       </div>
-    </header>
+    </section>
     <!-- ====== Header End ====== -->
 
     <!-- ====== Hero Start ====== -->
