--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 ========== -->
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
   <title>Play | Free Startup and SaaS Landing Page Template by UIdeck</title>
 
   <!-- Primary Meta Tags -->
