--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-xlg">
               <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo/logo.svg" alt="logo" />
+                <img src="assets/images/logo/logo.svg" alt="Homepage" />
               </a>
               <a class="navbar-toggler">
                 <span class="toggler-icon"> </span>
@@ -107,7 +107,7 @@
                 <li>
                   <a href="https://links.uideck.com/play-bootstrap-download" rel="nofollow noopener" target="_blank"
                     class="ud-main-btn ud-white-btn">
-                    Download Now
+                    Download <span class="sr-only">bootstrap</span> Now
                   </a>
                 </li>
                 <li>
@@ -119,12 +119,12 @@
               </ul>
             </div>
             <div class="ud-hero-brands-wrapper wow fadeInUp" data-wow-delay=".3s">
-              <img src="assets/images/hero/brand.svg" />
+              <img src="assets/images/hero/brand.svg" alt=""/>
             </div>
             <div class="ud-hero-image wow fadeInUp" data-wow-delay=".25s">
-              <img src="assets/images/hero/hero-image.svg" alt="shape" />
-              <img src="assets/images/hero/dotted-shape.svg" alt="shape" class="shape shape-1" />
-              <img src="assets/images/hero/dotted-shape.svg" alt="shape" class="shape shape-2" />
+              <img src="assets/images/hero/hero-image.svg" alt="eCommerce dashboard" />
+              <img src="assets/images/hero/dotted-shape.svg" alt="" class="shape shape-1" />
+              <img src="assets/images/hero/dotted-shape.svg" alt="" class="shape shape-2" />
             </div>
           </div>
         </div>
@@ -465,7 +465,7 @@
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="ud-widget">
               <a href="index.html" class="ud-footer-logo">
-                <img src="assets/images/logo/logo.svg" alt="" />
+                <img src="assets/images/logo/logo.svg" alt="Homepage" />
               </a>
               <p class="ud-widget-desc">
                 We create digital experiences for brands and companies by
@@ -473,22 +473,22 @@
               </p>
               <ul class="ud-widget-socials">
                 <li>
-                  <a href="https://twitter.com/MusharofChy">
+                  <a href="https://facebook.com/MusharofChy" aria-label="facebook">
                     <i class="lni lni-facebook-filled"></i>
                   </a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/MusharofChy">
+                  <a href="https://twitter.com/MusharofChy" aria-label="twitter">
                     <i class="lni lni-twitter-filled"></i>
                   </a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/MusharofChy">
+                  <a href="https://instagram.com/MusharofChy" aria-label="instagram">
                     <i class="lni lni-instagram-filled"></i>
                   </a>
                 </li>
                 <li>
-                  <a href="https://twitter.com/MusharofChy">
+                  <a href="https://linkedin.com/MusharofChy" aria-label="linkedin">
                     <i class="lni lni-linkedin-original"></i>
                   </a>
                 </li>
@@ -623,7 +623,7 @@
   <!-- ====== Footer End ====== -->
 
   <!-- ====== Back To Top Start ====== -->
-  <a href="javascript:void(0)" class="back-to-top">
+  <a href="javascript:void(0)" class="back-to-top" aria-label="back to top">
     <i class="lni lni-chevron-up"> </i>
   </a>
   <!-- ====== Back To Top End ====== -->
