--- a/index.html
+++ b/index.html
@@ -433,10 +433,10 @@
               <h3 class="ud-contact-form-title">Get In Touch</h3>
               <form class="ud-contact-form">
                 <div class="ud-form-group">
-                  <input id="email" type="email" name="email" placeholder="Email" />
+                  <input id="email" type="email" name="email" placeholder="abc@klick.com" aria-label="Email"  />
                 </div>
                 <div class="ud-form-group mb-0">
-                  <button type="submit" class="ud-main-btn">
+                  <button type="submit" class="ud-main-btn" aria-labelledby="submit button" >
                     Submit
                   </button>
                 </div>
