text gradient added

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 but the majority have suffered alteration in some form.
               </p>
               <div>
-                <video id="player" playsinline controls
+                <video id="player" playsinline controls autoplay
                   data-poster="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.jpg">
                   <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4"
                     type="video/mp4" />
